[gd_scene load_steps=9 format=3 uid="uid://cwjxgwknceu8e"]

[ext_resource type="Script" uid="uid://dak2kgyftr0v1" path="res://scene/enemy/root_enemy.gd" id="1_aiha7"]
[ext_resource type="Texture2D" uid="uid://cnabwb5ge3v1" path="res://scene/enemy/sprite/base_enemy.png" id="2_kol4j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kol4j"]
radius = 7.12871

[sub_resource type="CircleShape2D" id="CircleShape2D_4460q"]
radius = 137.824

[sub_resource type="CircleShape2D" id="CircleShape2D_eicjn"]
radius = 14.0

[sub_resource type="Animation" id="Animation_kol4j"]
resource_name = "move"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 0.965936, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.0872665]
}

[sub_resource type="Animation" id="Animation_eicjn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4460q"]
_data = {
&"RESET": SubResource("Animation_eicjn"),
&"move": SubResource("Animation_kol4j")
}

[node name="root_enemy" type="CharacterBody2D" groups=["root_enemy"]]
scale = Vector2(1.829, 1.829)
script = ExtResource("1_aiha7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.90735e-06, 12.5752)
shape = SubResource("CircleShape2D_kol4j")

[node name="seek_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="seek_area"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_4460q")

[node name="seek_timer" type="Timer" parent="."]
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kol4j")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 2.18699)
scale = Vector2(0.694554, 1.27838)
shape = SubResource("CircleShape2D_eicjn")
debug_color = Color(0.299725, 0.620002, 0.299821, 0.42)

[node name="Chase_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4460q")
}
speed_scale = 0.518

[connection signal="body_entered" from="seek_area" to="." method="_on_seek_area_body_entered"]
[connection signal="body_exited" from="seek_area" to="." method="_on_seek_area_body_exited"]
[connection signal="timeout" from="seek_timer" to="." method="_on_seek_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Chase_timer" to="." method="_on_chase_timer_timeout"]
